plugins {
  id 'java'
  id 'application'
  id 'org.javamodularity.moduleplugin' version '1.8.12'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group 'com.example'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainModule = 'com.example.excel'
  mainClass = 'com.example.excel.StudentAnalysisApp'
  applicationDefaultJvmArgs = [
          '--add-modules=javafx.controls,javafx.fxml' // Указываем модули JavaFX
  ]
}

tasks.named('distZip') {
  dependsOn shadowJar
}

tasks.named('distTar') {
  dependsOn shadowJar
}

tasks.named('startScripts') {
  dependsOn shadowJar
}
tasks.named('startShadowScripts') {
  dependsOn shadowJar
  mustRunAfter ':jar'

}

javafx {
  version = '17.0.6'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
  implementation 'org.openjfx:javafx-controls:17.0.6'
  implementation 'org.openjfx:javafx-fxml:17.0.6'
  implementation 'org.apache.poi:poi:5.2.3'
  implementation 'org.apache.poi:poi-ooxml:5.2.3'
  implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
  implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
  implementation 'org.jfree:jfreechart:1.5.3'
}

shadowJar {
  archiveClassifier.set('') // Убирает "all" из имени файла
  manifest {
    attributes(
            'Main-Class': 'com.example.excel.StudentAnalysisApp'
    )
  }
}
